--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -447,12 +447,12 @@ a:hover {
 }
 
 h1.title {
-  margin: 30px 20px 10px;
-  font-size: 60px;
-  font-weight: bold;
-  font-style: italic;
-  font-family:Georgia, serif;
-  text-align: center;
+	margin: 30px 20px 10px;
+	font-size: 60px;
+	font-weight: bold;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	text-align: center;
+	font-style: italic;
 }
 
 .wrapper {
@@ -467,9 +467,11 @@ h1.title {
 }
 
 p.tagline {
-  padding: 20px 20px 0;
-  color: #fff;
-  font-size: 17px;
+	padding: 20px 20px 0;
+	color: #fff;
+	font-size: 18px;
+	font-style: italic;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
 #main {
