--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -41,7 +41,9 @@ main,
 nav,
 section,
 summary {
-  display: block;
+	display: block;
+	font-style: italic;
+	font-size: 12px;
 }
 
 /**
@@ -489,7 +491,11 @@ p.tagline {
 }
 
 .download-bar .inner {
-  overflow: hidden;
+	overflow: hidden;
+	font-family: "MS Serif", "New York", serif;
+	font-size: 16px;
+	color: #CCC;
+	font-style: italic;
 }
 
 .download-bar .watch-fork iframe {
@@ -761,7 +767,9 @@ footer .owner p a {
 }
 
 .markdown-body h3 {
-  font-size: 20px;
+	font-size: 18px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-style: normal;
 }
 
 .markdown-body h4 {
@@ -966,3 +974,12 @@ footer .owner p a {
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+.wrapper #container #main .markdown-body h3 .anchor {
+	font-family: "Lucida Console", Monaco, monospace;
+}
+.wrapper #container #main .markdown-body h3 .anchor {
+	font-family: "MS Serif", "New York", serif;
+}
+.wrapper #container #main .markdown-body h3 .anchor {
+	font-family: "Arial Black", Gadget, sans-serif;
+}
